--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
-	<link rel="stylesheet" href="index.css">
-	<script src="jquery-1.10.2.min.js"></script>
+	<link rel="stylesheet" href="css/index.css">
+	<script src="scripts/jquery-1.10.2.min.js"></script>
 </head>
 <body>
-	<p>Hello World</p>
+	<p>Hello World!</p>
 </body>
 </html>
