CS - merge keyboard and index

--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="css/index.css">
-	<script src="scripts/jquery-1.10.2.min.js"></script>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="initial-sacle=float_value,user-scalable=no">
+    <title>Super Stroke</title>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="styles/keyboard.css">
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <script src="scripts/jquery-1.10.2.min.js"></script>
 </head>
+
 <body>
-	<p>Hello World!</p>
+    <p>Hello World!</p>
+    <div id="keyboard">
+        <div class="kb-wrapper container">
+            <div class="key btn btn-default col-xs-4"><span>一</span></div>
+            <div class="key btn btn-default col-xs-4"><span>1</span></div>
+            <div class="key btn btn-default col-xs-4"><span>J</span></div>
+            <div class="key btn btn-default col-xs-4"><span>`</span></div>
+            <div class="key btn btn-default col-xs-4"><span>7</span></div>
+            <div class="key btn btn-default col-xs-4"><span>.</span></div>
+        </div>
+    </div>
 </body>
+
 </html>
