correct the text on button

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <div id="keyboard">
         <div class="kb-wrapper container">
             <div class="key btn btn-default col-xs-4"><span>一</span></div>
-            <div class="key btn btn-default col-xs-4"><span>1</span></div>
-            <div class="key btn btn-default col-xs-4"><span>J</span></div>
-            <div class="key btn btn-default col-xs-4"><span>`</span></div>
-            <div class="key btn btn-default col-xs-4"><span>7</span></div>
-            <div class="key btn btn-default col-xs-4"><span>.</span></div>
+            <div class="key btn btn-default col-xs-4"><span>丨</span></div>
+            <div class="key btn btn-default col-xs-4"><span>丿</span></div>
+            <div class="key btn btn-default col-xs-4"><span>丶</span></div>
+            <div class="key btn btn-default col-xs-4"><span>ㄥ</span></div>
+            <div class="key btn btn-default col-xs-4"><span>*</span></div>
         </div>
     </div>
 </body>
