--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
 </head>
 
 <body>
-    <p>Hello World!</p>
+	<div id="character"></div>
+	<div id="strokes"></div>
     <div id="keyboard">
         <div class="kb-wrapper container">
-            <div class="key btn btn-default col-xs-4"><span>一</span></div>
-            <div class="key btn btn-default col-xs-4"><span>丨</span></div>
-            <div class="key btn btn-default col-xs-4"><span>丿</span></div>
-            <div class="key btn btn-default col-xs-4"><span>丶</span></div>
-            <div class="key btn btn-default col-xs-4"><span>ㄥ</span></div>
-            <div class="key btn btn-default col-xs-4"><span>*</span></div>
+            <div class="key btn btn-default col-xs-4" data-value="一"><span>一</span></div>
+            <div class="key btn btn-default col-xs-4" data-value="丨"><span>丨</span></div>
+            <div class="key btn btn-default col-xs-4" data-value="丿"><span>丿</span></div>
+            <div class="key btn btn-default col-xs-4" data-value="丶"><span>丶</span></div>
+            <div class="key btn btn-default col-xs-4" data-value="ㄥ"><span>ㄥ</span></div>
+            <div class="key btn btn-default col-xs-4" data-value="*"><span>*</span></div>
         </div>
     </div>
 </body>
-
+<script src="scripts/index.js"></script>
 </html>
