--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,12 +9,14 @@
     <link rel="stylesheet" href="styles/keyboard.css">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <script src="scripts/jquery-1.10.2.min.js"></script>
+    <script src="scripts/keyboard.js"></script>
+    <script src="scripts/index.js"></script>
 </head>
 
 <body>
 	<div id="character"></div>
 	<div id="strokes"></div>
-    <div id="keyboard">
+    <div id="keyboard1">
         <div class="kb-wrapper container">
             <div class="key btn btn-default col-xs-4" data-value="一"><span>一</span></div>
             <div class="key btn btn-default col-xs-4" data-value="丨"><span>丨</span></div>
@@ -25,6 +26,6 @@
             <div class="key btn btn-default col-xs-4" data-value="*"><span>*</span></div>
         </div>
     </div>
+    <div id="keyboard"></div>
 </body>
-<script src="scripts/index.js"></script>
 </html>
