--- a/keyboard.html
+++ b/keyboard.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8">
-        <meta name="viewport" content="initial-sacle=float_value,user-scalable=no">
-        <link rel="stylesheet" href="styles/keyboard.css">
-        <link rel="stylesheet" href="styles/bootstrap.min.css">
-        <title>keyboard</title>
-    </head>
-    <body>
-        <div id="keyboard" >
-            <div class="kb-wrapper container">
-                <div class="key btn btn-default col-xs-4"><span>一</span></div>
-                <div class="key btn btn-default col-xs-4"><span>1</span></div>
-                <div class="key btn btn-default col-xs-4"><span>J</span></div>
-                <div class="key btn btn-default col-xs-4"><span>`</span></div>
-                <div class="key btn btn-default col-xs-4"><span>7</span></div>
-                <div class="key btn btn-default col-xs-4"><span>.</span></div>
-            </div>
-        </div>
-    </body>
+
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width:480,initial-sacle=float_value,user-scalable=no">
+    <link rel="stylesheet" href="styles/keyboard.css">
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <script src="scripts/jquery-1.10.2.min.js"></script>
+    <script src="scripts/index.js"></script>
+    <script src="scripts/keyboard.js"></script>
+    
+    <title>keyboard</title>
+</head>
+
+<body>
+   <div id="keyboard"></div>
+</body>
+
 </html>
-
-
