--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-sacle=float_value,user-scalable=no">
     <title>Super Stroke</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/stroke.css">
     <link rel="stylesheet" href="styles/keyboard.css">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <script src="scripts/jquery-1.10.2.min.js"></script>
     <script src="scripts/keyboard.js"></script>
+    <script src="scripts/strokeManager.js"></script>
     <script src="scripts/index.js"></script>
 </head>
 
 <body>
 	<div id="character"></div>
-	<div id="strokes"></div>
+	<div id="strokes">
+	</div>
     <div id="keyboard"></div>
 </body>
 </html>
