--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="scripts/jquery-1.10.2.min.js"></script>
     <script src="scripts/keyboard.js"></script>
     <script src="scripts/strokeManager.js"></script>
+    <script src="scripts/wordsManager.js"></script>
     <script src="scripts/index.js"></script>
 </head>
 
