display previous and next character

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 </head>
 
 <body>
-<div id="character"></div>
+<div id="character" class="row">
+    <div class="previous col-xs-4"></div>
+    <div class="current col-xs-4"></div>
+    <div class="next col-xs-4"></div>
+</div>
 <div id="strokes">
 </div>
 <div id="keyboard"></div>
