key turn red when make mistakes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=480px,initial-sacle=1.0,user-scalable=no">
+    <meta name="viewport" content="width=480px,initial-scale=1.0,user-scalable=no">
     <title>Super Stroke</title>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/stroke.css">
