--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="scripts/keyboard.js"></script>
     <script src="scripts/strokeManager.js"></script>
     <script src="scripts/wordsManager.js"></script>
+    <script src="scripts/resultManager.js"></script>
     <script src="scripts/index.js"></script>
 </head>
 
@@ -24,6 +25,8 @@
 </div>
 <div id="strokes">
 </div>
+<div class="fastest">最熟练的笔画：</div>
+<div class="slowest">最不熟练的笔画：</div>
 <div id="keyboard"></div>
 </body>
 </html>
