--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Super Stroke</title>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/stroke.css">
@@ -18,15 +19,18 @@
 </head>
 
 <body>
-<div id="character" class="row">
-    <div class="previous col-xs-4"></div>
-    <div class="current col-xs-4"></div>
-    <div class="next col-xs-4"></div>
-</div>
-<div id="strokes">
-</div>
-<div class="fastest">最熟练的笔画：</div>
-<div class="slowest">最不熟练的笔画：</div>
-<div id="keyboard"></div>
+    <div id="character-wrapper">
+        <div id="character" class="row">
+            <div class="previous col-xs-4"></div>
+            <div class="current col-xs-4"></div>
+            <div class="next col-xs-4"></div>
+        </div>
+        <div id="strokes">
+        </div>
+    </div>
+    <div class="fastest">最熟练的笔画：</div>
+    <div class="slowest">最不熟练的笔画：</div>
+    <div id="keyboard"></div>
 </body>
+
 </html>
