--- a/pinyin.html
+++ b/pinyin.html
@@ -9,17 +9,20 @@
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/stroke.css">
     <link rel="stylesheet" href="styles/keyboard.css">
+    <link rel="stylesheet" href="styles/pyManager.css"/>
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <script src="scripts/jquery-1.10.2.min.js"></script>
     <script src="scripts/keyboard-pinyin.js"></script>
     <script src="scripts/strokeManager.js"></script>
     <script src="scripts/wordsManager.js"></script>
     <script src="scripts/resultManager.js"></script>
+    <script src="scripts/pyManager.js"></script>
     <script src="scripts/pinyin.js"></script>
 </head>
 
 <body>
 <div id="character-wrapper">
+    <div id="pyList"></div>
     <div id="character" class="row">
         <div class="previous col-xs-4"></div>
         <div class="current col-xs-4"></div>
