--- a/pinyin.html
+++ b/pinyin.html
@@ -6,21 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width:480,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Super Stroke</title>
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/stroke.css">
     <link rel="stylesheet" href="styles/keyboard.css">
     <link rel="stylesheet" href="styles/pyManager.css"/>
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/menu.css"/>
     <script src="scripts/jquery-1.10.2.min.js"></script>
+    <script src="scripts/utils.js"></script>
     <script src="scripts/keyboard-pinyin.js"></script>
     <script src="scripts/strokeManager.js"></script>
     <script src="scripts/wordsManager.js"></script>
     <script src="scripts/resultManager.js"></script>
     <script src="scripts/pyManager.js"></script>
+    <script src="scripts/menu.js"></script>
     <script src="scripts/pinyin.js"></script>
 </head>
 
 <body>
+<div id="menu"></div>
 <div id="character-wrapper">
     <div id="pyList"></div>
     <div id="character" class="row">
