--- a/index.html
+++ b/index.html
@@ -6,19 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width:480,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Super Stroke</title>
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/stroke.css">
     <link rel="stylesheet" href="styles/keyboard.css">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/menu.css">
     <script src="scripts/jquery-1.10.2.min.js"></script>
     <script src="scripts/keyboard.js"></script>
     <script src="scripts/strokeManager.js"></script>
     <script src="scripts/wordsManager.js"></script>
     <script src="scripts/resultManager.js"></script>
+    <script src="scripts/menu.js"></script>
     <script src="scripts/index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 </head>
 
 <body>
+    <div id="menu"></div>
     <div id="character-wrapper">
         <div id="character" class="row">
             <div class="previous col-xs-4"></div>
