--- a/pinyin.html
+++ b/pinyin.html
@@ -21,6 +21,8 @@
     <script src="scripts/pyManager.js"></script>
     <script src="scripts/menu.js"></script>
     <script src="scripts/pinyin.js"></script>
+    <script src="scripts/jquery.canvasjs.min.js"></script>
+    <script src="scripts/canvasjs.min.js"></script>
 </head>
 
 <body>
