--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <script src="scripts/resultManager.js"></script>
     <script src="scripts/menu.js"></script>
     <script src="scripts/index.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+    <script src="scripts/jquery.canvasjs.min.js"></script>
+    <script src="scripts/canvasjs.min.js"></script>
 </head>
 
 <body>
@@ -28,6 +29,7 @@
             <div class="previous col-xs-4"></div>
             <div class="current col-xs-4"></div>
             <div class="next col-xs-4"></div>
+            <div class="info col-xs-12"></div>
         </div>
         <div id="strokes">
         </div>
