--- a/pinyin.html
+++ b/pinyin.html
@@ -26,7 +26,11 @@
 </head>
 
 <body>
-<div id="menu"></div>
+<div id="historyPage">
+    <div id="historyChart" style="width:100%;overflow-y:hidden"></div>
+</div>
+<div id="menu">
+</div>
 <div id="character-wrapper">
     <div id="pyList"></div>
     <div id="character" class="row">
