--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 </head>
 
 <body>
+<div id="historyPage">
+    <div id="historyChart" style="width:100%;"></div>
+</div>
     <div id="menu"></div>
     <div id="character-wrapper">
         <div id="character" class="row">
